--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <script>
         // Firebase Configuration (Replace with your details)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "your-app.firebaseapp.com",
-            projectId: "your-app",
-            storageBucket: "your-app.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+          apiKey: "AIzaSyB9aamikPRI-98-Tv9IG65vvk4qkO-qTnE",
+          authDomain: "srnk-associates.firebaseapp.com",
+          projectId: "srnk-associates",
+          storageBucket: "srnk-associates.firebasestorage.app",
+          messagingSenderId: "138345212232",
+          appId: "1:138345212232:web:1593d3ab9727f29aa86b7d"
         };
 
         // Initialize Firebase
