--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Login with Firebase</title>
+
+    <!-- Firebase App SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+    <!-- Firebase Authentication SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js"></script>
+
 </head>
 <body>
     <h2>Login with Google</h2>
