--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- Firebase Authentication SDK -->
     <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js"></script>
     <!-- FirebaseUI for Authentication -->
-    <script src="https://cdn.firebase.com/libs/firebaseui/4.8.0/firebaseui.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/4.8.0/firebaseui.css" />
+    <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
 </head>
 <body>
     <h2>Login with Google</h2>
@@ -51,7 +51,7 @@
         // Listen to authentication state changes
         firebase.auth().onAuthStateChanged(user => {
           if (user) {
-           ('user-status').innerText = `Logged in as: ${user.displayName}`;
+            document.getElementById('user-status').innerText = `Logged in as: ${user.displayName}`;
           } else {
             document.getElementById('user-status').innerText = "Not logged in";
           }
