--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Login with Firebase</title>
 
-    <!-- Firebase App SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <!-- Firebase Authentication SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
     <!-- FirebaseUI for Authentication -->
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
@@ -19,37 +15,43 @@
     <div id="loader">Loading...</div>
     <p id="user-status">Not logged in</p>
 
-    <script>
-        // Firebase Configuration (Replace with your details)
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
+        import { getAuth, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js";
+        import * as firebaseui from "https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js";
+
+        // Your web app's Firebase configuration
         const firebaseConfig = {
           apiKey: "AIzaSyB9aamikPRI-98-Tv9IG65vvk4qkO-qTnE",
           authDomain: "srnk-associates.firebaseapp.com",
           projectId: "srnk-associates",
           storageBucket: "srnk-associates.appspot.com",
           messagingSenderId: "138345212232",
-          appId: "1:138345212232:web:1593d3ab9727f29aa86b7d"
+          appId: "1:138345212232:web:68746eb7b305a16da86b7d"
         };
 
         // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
 
         // FirebaseUI config.
-        var uiConfig = {
+        const uiConfig = {
           signInSuccessUrl: 'https://username.github.io',
           signInOptions: [
-            firebase.auth.GoogleAuthProvider.PROVIDER_ID
+            GoogleAuthProvider.PROVIDER_ID
           ],
           tosUrl: 'https://username.github.io/terms.html',
           privacyPolicyUrl: 'https://username.github.io/privacy.html'
         };
 
         // Initialize the FirebaseUI Widget using Firebase.
-        var ui = new firebaseui.auth.AuthUI(firebase.auth());
+        const ui = new firebaseui.auth.AuthUI(auth);
         // The start method will wait until the DOM is loaded.
         ui.start('#firebaseui-auth-container', uiConfig);
 
         // Listen to authentication state changes
-        firebase.auth().onAuthStateChanged(user => {
+        auth.onAuthStateChanged(user => {
           if (user) {
             document.getElementById('user-status').innerText = `Logged in as: ${user.displayName}`;
           } else {
