--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
-        import { getAuth, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js";
-        import * as firebaseui from "https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js";
+        import { getAuth, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js";
+        import { AuthUI } from "https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js";
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
@@ -46,12 +46,12 @@
         };
 
         // Initialize the FirebaseUI Widget using Firebase.
-        const ui = new firebaseui.auth.AuthUI(auth);
+        const ui = new AuthUI(auth);
         // The start method will wait until the DOM is loaded.
         ui.start('#firebaseui-auth-container', uiConfig);
 
         // Listen to authentication state changes
-        auth.onAuthStateChanged(user => {
+        onAuthStateChanged(auth, user => {
           if (user) {
             document.getElementById('user-status').innerText = `Logged in as: ${user.displayName}`;
           } else {
