--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 </head>
 <body>
     <h2>Login with Google</h2>
+
+    <!-- This is where the login button will appear -->
     <div id="firebaseui-auth-container"></div>
+    
+    <!-- This message will show the current login status -->
     <div id="loader">Loading...</div>
     <p id="user-status">Not logged in</p>
 
     <script type="module">
-        // Import the functions you need from the SDKs you need
+        // Import the necessary Firebase SDKs
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
         import { getAuth, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js";
-        import { AuthUI } from "https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js";
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
@@ -35,19 +38,20 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
-        // FirebaseUI config.
+        // FirebaseUI config for Google sign-in
         const uiConfig = {
-          signInSuccessUrl: 'https://username.github.io',
+          signInSuccessUrl: 'https://shubhamkhuteta.github.io', // Redirect URL after successful login
           signInOptions: [
-            GoogleAuthProvider.PROVIDER_ID
+            GoogleAuthProvider.PROVIDER_ID,  // Google Login Option
           ],
-          tosUrl: 'https://username.github.io/terms.html',
-          privacyPolicyUrl: 'https://username.github.io/privacy.html'
+          tosUrl: 'https://username.github.io/terms.html', // Terms of Service URL
+          privacyPolicyUrl: 'https://username.github.io/privacy.html' // Privacy Policy URL
         };
 
-        // Initialize the FirebaseUI Widget using Firebase.
-        const ui = new AuthUI(auth);
-        // The start method will wait until the DOM is loaded.
+        // Initialize the FirebaseUI Widget using Firebase Auth instance
+        const ui = new firebaseui.auth.AuthUI(auth);
+
+        // Start the FirebaseUI auth flow
         ui.start('#firebaseui-auth-container', uiConfig);
 
         // Listen to authentication state changes
