--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- FirebaseUI for Authentication -->
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.css" />
+    
+    <!-- Firebase Compatibility SDK for accessing firebase.initializeApp() -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
 </head>
 <body>
     <h2>Login with Google</h2>
@@ -20,10 +24,6 @@
     <p id="user-status">Not logged in</p>
 
     <script type="module">
-        // Import the necessary Firebase SDKs
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
-        import { getAuth, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-auth.js";
-
         // Your web app's Firebase configuration
         const firebaseConfig = {
           apiKey: "AIzaSyB9aamikPRI-98-Tv9IG65vvk4qkO-qTnE",
@@ -34,18 +34,17 @@
           appId: "1:138345212232:web:68746eb7b305a16da86b7d"
         };
 
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
+        // Initialize Firebase with compatibility SDK
+        const firebase = window.firebase;
+        firebase.initializeApp(firebaseConfig);
 
-        // Expose firebase instance to the global scope (for Firebase UI compatibility)
-        window.firebase = app;
+        const auth = firebase.auth();
 
         // FirebaseUI config for Google sign-in
         const uiConfig = {
-          signInSuccessUrl: 'https://shubhamkhuteta.github.io', // Redirect URL after successful login
+          signInSuccessUrl: 'https://username.github.io', // Redirect URL after successful login
           signInOptions: [
-            GoogleAuthProvider.PROVIDER_ID,  // Google Login Option
+            firebase.auth.GoogleAuthProvider.PROVIDER_ID,  // Google Login Option
           ],
           tosUrl: 'https://username.github.io/terms.html', // Terms of Service URL
           privacyPolicyUrl: 'https://username.github.io/privacy.html' // Privacy Policy URL
@@ -58,7 +57,7 @@
         ui.start('#firebaseui-auth-container', uiConfig);
 
         // Listen to authentication state changes
-        onAuthStateChanged(auth, user => {
+        auth.onAuthStateChanged(user => {
           if (user) {
             document.getElementById('user-status').innerText = `Logged in as: ${user.displayName}`;
           } else {
