--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         // FirebaseUI config for Google sign-in
         const uiConfig = {
-          signInSuccessUrl: 'https://shubhamkhuteta.github.io', // Redirect URL after successful login
+          signInSuccessUrl: 'https://shubhamkhuteta.github.io/SRNK-Associates', // Redirect URL after successful login
           signInOptions: [
             firebase.auth.GoogleAuthProvider.PROVIDER_ID,  // Google Login Option
           ],
