--- a/login.html
+++ b/login.html
@@ -3,44 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - SRNK Associates</title>
-
-    <!-- Bootstrap & Custom Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Login</title>
 </head>
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">SRNK Associates</a>
-      </div>
-    </nav>
 
-    <!-- Login Form -->
-    <div class="container">
-        <div class="row justify-content-center my-5">
-            <div class="col-md-6">
-                <h2 class="text-center">Login to Your Account</h2>
-                <form id="login-form" class="shadow p-4 bg-light rounded">
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                    </div>
-                    <div class="mb-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Enter your password">
-                    </div>
-                    <button type="button" id="login-button" class="btn btn-primary w-100">Login</button>
-                </form>
-                <div class="mt-3 text-center">
-                    <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Enter your email" required>
+    <input type="password" id="password" placeholder="Enter your password" required>
+    <button id="login-button">Login</button>
+
+    <p id="user-status">Not logged in</p>
 
     <script src="scripts.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
