--- a/upload.html
+++ b/upload.html
@@ -3,39 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Documents - SRNK Associates</title>
-
-    <!-- Bootstrap & Custom Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <title>Upload Document</title>
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">SRNK Associates</a>
-  </div>
-</nav>
+    <h2>Upload Document</h2>
+    <input type="file" id="file-upload" accept="application/pdf,image/*">
+    <button id="upload-button">Upload</button>
+    <div id="upload-status"></div>
 
-<!-- Upload Document Form -->
-<div class="container">
-    <div class="row justify-content-center my-5">
-        <div class="col-md-6">
-            <h2 class="text-center">Upload Your Documents</h2>
-            <form id="upload-form" class="shadow p-4 bg-light rounded">
-                <div class="mb-3">
-                    <label for="file-upload" class="form-label">Select Document</label>
-                    <input type="file" class="form-control" id="file-upload" accept="application/pdf,image/*">
-                </div>
-                <button type="button" id="upload-button" class="btn btn-primary w-100">Upload</button>
-                <div id="upload-status" class="mt-3 text-center"></div>
-            </form>
-        </div>
-    </div>
-</div>
+    <h2>Documents</h2>
+    <div id="documents-list"></div>
 
-<script src="scripts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <p id="user-status">Not logged in</p>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
